prover-ray/zkcdriver/testdata/synced/invalid/field_03.zkc
//error:3:9-10:expected type 𝔽
fn f(x:u32) -> (r:𝔽) {
    r = x
    return
}
